On BTRFS, GNOME loses all settings after reboot when computer fails to return from suspend
I am running Fedora Workstation 35, fully updated with kernel 5.14.18 and GNOME 41.1, running on the Wayland session. I have not tried GNOME on Xorg, but given that the first half of the issue is a kernel problem (suspend not working), I do not believe that GNOME on Xorg will fix this. Affected version
After the computer returns from suspend, it crashes (glitched graphics show on screen then it goes blank), so the computer has to be forced to reboot. I know that the computer crashing is not a GNOME problem, that is a kernel problem. The problem with GNOME is that, after the reboot, GNOME loses all of its settings. Bug summary
Steps to reproduce
- Have a computer that does not reliably suspend, e.g. one with an AMD Ryzen CPU.
- Customise GNOME settings - pin some apps on the dash, change some Nautilus settings, change the desktop wallpaper, etc.
- Put computer into suspend.
- Wake computer up, it crashes.
- Force reboot computer.
- GNOME has lost all of its settings.
All GNOME settings, including desktop wallpaper, pinned apps on the dash, set world clocks, set weather location, calendars, Nautilus settings, etc, all get cleared if the computer fails to return from suspend. This only started happening recently. It is unexpected because settings are stored on disk, not in RAM, so why would they be all gone after an unclean reboot? What happened
I expected that GNOME would not lose all of its settings. The computer crashing after suspend is not a GNOME problem of course, but all of the settings should not be cleared when that happens. I do not remember this ever occuring on older versions of GNOME, including GNOME 3.30 (on Debian 10), GNOME 3.38 (on Fedora 33) or GNOME 40 (on Fedora 34). What did you expect to happen
Relevant logs, screenshots, screencasts etc.
I do not have a video of this problem occuring but I may be able to add one later (in class right now
Edited by Andre Klapper